--- a/frontend/src/app/pages/home/home.component.css
+++ b/frontend/src/app/pages/home/home.component.css
@@ -226,6 +226,7 @@ body {
   display: flex;
   flex-direction: column;
   background: var(--accent-surface);
+  min-width: 0;
 }
 
 .featured-media {
@@ -244,6 +245,11 @@ body {
 .featured-company-copy {
   padding: 18px 20px 22px;
   color: var(--accent-text);
+
+  width: 100%;
+  max-width: 100%;
+  box-sizing: border-box;
+  min-width: 0;
 }
 
 .featured-company-copy h3,
@@ -256,15 +262,20 @@ body {
 
 .featured-job p, .featured-job h3{
    display: -webkit-box;
-  -webkit-line-clamp: 3;   /* número de líneas */
+  -webkit-line-clamp: 3;   
   -webkit-box-orient: vertical;
   overflow: hidden;
-  width: 469px;
+  width: 100%;
 }
 
 .featured-company-copy h3 {
   margin-top: 12px;
   font-size: 22px;
+   display: -webkit-box;
+  -webkit-line-clamp: 3;   
+  -webkit-box-orient: vertical;
+  overflow: hidden;
+  width: 100%;
 }
 
 .featured-company-copy p {
@@ -457,7 +468,7 @@ body {
   -webkit-line-clamp: 3;   
   -webkit-box-orient: vertical;
   overflow: hidden;
-  width: 171px;
+  width: 100%;
 }
 
 .salary {
@@ -499,6 +510,7 @@ body {
   color: var(--accent-text);
   padding: 10px;
   border-radius: 10px;
+  margin-left: 50px
 }
 
 .right {
@@ -1061,4 +1073,21 @@ body {
 
   display: flex;
   justify-content: center;
+}
+
+.service-desc{
+display: -webkit-box; 
+-webkit-line-clamp: 4; 
+-webkit-box-orient: vertical;
+overflow: hidden; 
+width: 100%;
+}
+
+
+.service-title{
+display: -webkit-box; 
+-webkit-line-clamp: 3; 
+-webkit-box-orient: vertical;
+overflow: hidden; 
+width: 90%;
 }
